# fastapi-booking-service

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
csv/: bookings.csv  hotels.csv  rooms.csv
fastapi_course_app/app/: __init__.py  config.py  conftest.py  database.py  exceptions.py  logger.py  main.py
fastapi_course_app/app/admin/: __init__.py  auth.py  views.py
fastapi_course_app/app/bookings/: models.py  router.py  schemas.py  service.py
fastapi_course_app/app/docker/: app.sh  celery.sh
fastapi_course_app/app/hotels/: models.py  router.py  schemas.py  service.py
fastapi_course_app/app/hotels/rooms/: models.py  router.py  schemas.py  service.py
fastapi_course_app/app/images/: router.py
fastapi_course_app/app/importer/: router.py  utils.py
fastapi_course_app/app/migrations/: env.py
fastapi_course_app/app/migrations/versions/: 545d562729b4_update_sqlalchemy_models_to_v2_style.py  845b03ccc1b3_initial_migration.py  d510da78b292_added_users_model.py  d81e79f3e5d8_added_rooms_model.py  ed2f4cb9de05_added_bookings_model_made_rooms_image_.py
fastapi_course_app/app/pages/: router.py
fastapi_course_app/app/service/: base.py
fastapi_course_app/app/static/css/: main.css
fastapi_course_app/app/tasks/: __init__.py  celery.py  email_smtp.py  email_templates.py  scheduled.py  tasks.py
fastapi_course_app/app/templates/: hotels.html
fastapi_course_app/app/tests/: __init__.py  conftest.py
fastapi_course_app/app/tests/integration_tests/bookings_tests/: test_api_bookings.py  test_service_bookings.py
fastapi_course_app/app/tests/integration_tests/hotels_tests/: test_api_hotels.py
fastapi_course_app/app/tests/integration_tests/users_tests/: test_api_users.py
fastapi_course_app/app/tests/unit_tests/users_tests/: test_users_service.py
fastapi_course_app/app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py
