[tool.poetry]
name = "fastapi-course-app"
version = "0.1.0"
description = ""
authors = ["nshib <nshib54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.1"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
celery = "^5.4.0"
pillow = "^10.4.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
